--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,51 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="c">Productos agregados al carrito: <span id="conta">0</span></h1>
+    </header>
+    <div class="wrapper" id="wrapper">
+        <div class="card" id="card">
+            <img src="../image/david-hinkle-cWLoRkfiQLY-unsplash.jpg" alt="" class="card-img">
+            <div class="desc" id="desc">
+                <h2 class="card-titulo" id="titulo">nike airmax 200</h2>
+                <h3 class="precio" id="precio">$5000</h3>
+                <button class="b" id="b">COMPRAR</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../image/klim-musalimov-CMGKxMmZcRk-unsplash.jpg" alt="" class="card-img">
+            <div class="desc" id="desc">
+                <h2 class="card-titulo" id="titulo">nike blazer high</h2>
+                <h3 class="precio" id="precio">$5000</h3>
+                <button class="b" id="b">COMPRAR</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../image/marcello-gamez-JbBOUoAygcg-unsplash.jpg" alt="" class="card-img">
+            <div class="desc" id="desc">
+                <h2 class="card-titulo" id="titulo">nike sbdunk high</h2>
+                <h3 class="precio" id="precio">$5000</h3>
+                <button class="b" id="b">COMPRAR</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../image/ryan-plomp-76w_eDO1u1E-unsplash.jpg" alt="" class="card-img">
+            <div class="desc" id="desc">
+                <h2 class="card-titulo" id="titulo">nike blazer ft sharpie</h2>
+                <h3 class="precio" id="precio">$5000</h3>
+                <button class="b" id="b">COMPRAR</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="../image/ryan-plomp-VDFmHq3Qkjc-unsplash.jpg" alt="" class="card-img">
+            <div class="desc" id="desc">
+                <h2 class="card-titulo" id="titulo">jordan retro 1 fusion</h2>
+                <h3 class="precio" id="precio">$5000</h3>
+                <button class="b" id="b">COMPRAR</button>
+            </div>
+        </div>
+    </div>
+    <script src="/js/main.js"></script>
 </body>
 </html>
