agregado carrito con componentes y estilos, no esta finalizado

--- a/html/index.html
+++ b/html/index.html
@@ -8,50 +8,65 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="c">Productos agregados al carrito: <span id="conta">0</span></h1>
+        <h1 class="tt">SNEAKERHEADS</h1>
+
+        <button class="add" id="add">
+            Carrito de compras
+        </button>
     </header>
     <div class="wrapper" id="wrapper">
         <div class="card" id="card">
             <img src="../image/david-hinkle-cWLoRkfiQLY-unsplash.jpg" alt="" class="card-img">
             <div class="desc" id="desc">
-                <h2 class="card-titulo" id="titulo">nike airmax 200</h2>
+                <h2 class="card-titulo" id="titulo">nike blazer high</h2>
                 <h3 class="precio" id="precio">$5000</h3>
-                <button class="b" id="b">COMPRAR</button>
+                <button class="b" id="b">AGREGAR AL CARRITO</button>
             </div>
         </div>
         <div class="card">
             <img src="../image/klim-musalimov-CMGKxMmZcRk-unsplash.jpg" alt="" class="card-img">
             <div class="desc" id="desc">
-                <h2 class="card-titulo" id="titulo">nike blazer high</h2>
+                <h2 class="card-titulo" id="titulo">nike sbdunk high</h2>
                 <h3 class="precio" id="precio">$5000</h3>
-                <button class="b" id="b">COMPRAR</button>
+                <button class="b" id="b">AGREGAR AL CARRITO</button>
             </div>
         </div>
         <div class="card">
             <img src="../image/marcello-gamez-JbBOUoAygcg-unsplash.jpg" alt="" class="card-img">
             <div class="desc" id="desc">
-                <h2 class="card-titulo" id="titulo">nike sbdunk high</h2>
+                <h2 class="card-titulo" id="titulo">nike blazer ft sharpie</h2>
                 <h3 class="precio" id="precio">$5000</h3>
-                <button class="b" id="b">COMPRAR</button>
+                <button class="b" id="b">AGREGAR AL CARRITO</button>
             </div>
         </div>
         <div class="card">
             <img src="../image/ryan-plomp-76w_eDO1u1E-unsplash.jpg" alt="" class="card-img">
             <div class="desc" id="desc">
-                <h2 class="card-titulo" id="titulo">nike blazer ft sharpie</h2>
+                <h2 class="card-titulo" id="titulo">jordan retro 1 fusion</h2>
                 <h3 class="precio" id="precio">$5000</h3>
-                <button class="b" id="b">COMPRAR</button>
+                <button class="b" id="b">AGREGAR AL CARRITO</button>
             </div>
         </div>
         <div class="card">
             <img src="../image/ryan-plomp-VDFmHq3Qkjc-unsplash.jpg" alt="" class="card-img">
             <div class="desc" id="desc">
-                <h2 class="card-titulo" id="titulo">jordan retro 1 fusion</h2>
+                <h2 class="card-titulo" id="titulo">nike air max 200</h2>
                 <h3 class="precio" id="precio">$5000</h3>
-                <button class="b" id="b">COMPRAR</button>
+                <button class="b" id="b">AGREGAR AL CARRITO</button>
             </div>
         </div>
     </div>
+    <div id="carritoModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h1>Elementos en el Carrito</h1>
+          <h2 class="c">Productos agregados al carrito: <span id="conta">0</span></h2>
+          <ul id="carritoItems">
+            <!-- Aquí se mostrarán los elementos agregados al carrito -->
+          </ul>
+          <button class="comprar" id="comprar">COMPRAR</button>
+        </div>
+      </div>
     <script src="/js/main.js"></script>
 </body>
 </html>
